--- a/app/src/main/res/layout/recycler_view_application_employee_row.xml
+++ b/app/src/main/res/layout/recycler_view_application_employee_row.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="410dp"
-        android:layout_height="282dp"
+        android:layout_width="411dp"
+        android:layout_height="374dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
@@ -29,26 +29,27 @@
                 android:textAlignment="textEnd"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/textView60"
-                app:layout_constraintTop_toBottomOf="@+id/Coverageletterapplication" />
+                app:layout_constraintEnd_toStartOf="@+id/textEmployeeApplicationStatus"
+                app:layout_constraintTop_toBottomOf="@+id/textEmployeeApplicationCoverLetter" />
 
             <TextView
-                android:id="@+id/EmployeeApplicationinfo"
+                android:id="@+id/textEmployeeApplicationJobTitle"
                 android:layout_width="261dp"
-                android:layout_height="39dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="8dp"
                 android:text="Job Title"
-                app:layout_constraintEnd_toEndOf="@+id/textView59"
+                app:layout_constraintEnd_toEndOf="@+id/textApplicationID"
                 app:layout_constraintTop_toBottomOf="@+id/textView45" />
 
             <TextView
-                android:id="@+id/Coverageletterapplication"
+                android:id="@+id/textEmployeeApplicationCoverLetter"
                 android:layout_width="383dp"
-                android:layout_height="85dp"
-                android:layout_marginTop="32dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:text="Coverage Letter"
-                app:layout_constraintEnd_toEndOf="@+id/EmployeeApplicationinfo"
-                app:layout_constraintTop_toBottomOf="@+id/EmployeeApplicationinfo" />
+                app:layout_constraintEnd_toEndOf="@+id/textEmployeeApplicationJobTitle"
+                app:layout_constraintTop_toBottomOf="@+id/textView63" />
 
             <TextView
                 android:id="@+id/textView45"
@@ -60,11 +61,11 @@
                 android:textAlignment="textEnd"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/textView59"
+                app:layout_constraintEnd_toStartOf="@+id/textApplicationID"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView59"
+                android:id="@+id/textApplicationID"
                 android:layout_width="71dp"
                 android:layout_height="28dp"
                 android:layout_marginEnd="16dp"
@@ -73,26 +74,26 @@
                 app:layout_constraintTop_toTopOf="@+id/textView45" />
 
             <TextView
-                android:id="@+id/textView60"
+                android:id="@+id/textEmployeeApplicationStatus"
                 android:layout_width="114dp"
                 android:layout_height="24dp"
                 android:layout_marginTop="28dp"
                 android:text="Applic Status"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="@+id/Coverageletterapplication"
-                app:layout_constraintTop_toBottomOf="@+id/Coverageletterapplication" />
+                app:layout_constraintEnd_toEndOf="@+id/textEmployeeApplicationCoverLetter"
+                app:layout_constraintTop_toBottomOf="@+id/textEmployeeApplicationCoverLetter" />
 
             <TextView
                 android:id="@+id/textView62"
                 android:layout_width="91dp"
                 android:layout_height="17dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="12dp"
                 android:text="Job's Title:"
                 android:textAlignment="textEnd"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/EmployeeApplicationinfo"
-                app:layout_constraintEnd_toStartOf="@+id/EmployeeApplicationinfo"
-                app:layout_constraintTop_toTopOf="@+id/EmployeeApplicationinfo"
+                app:layout_constraintBottom_toBottomOf="@+id/textEmployeeApplicationJobTitle"
+                app:layout_constraintEnd_toStartOf="@+id/textEmployeeApplicationJobTitle"
+                app:layout_constraintTop_toTopOf="@+id/textEmployeeApplicationJobTitle"
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
@@ -100,13 +101,25 @@
                 android:layout_width="107dp"
                 android:layout_height="27dp"
                 android:layout_marginStart="4dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="88dp"
                 android:layout_marginEnd="284dp"
                 android:text="Cover Letter:"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/EmployeeApplicationinfo"
+                app:layout_constraintEnd_toEndOf="@+id/textEmployeeApplicationJobTitle"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView62" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:text="Button"
+                app:layout_constraintBottom_toTopOf="@+id/textEmployeeApplicationCoverLetter"
+                app:layout_constraintEnd_toEndOf="@+id/textApplicationID"
+                app:layout_constraintTop_toBottomOf="@+id/textEmployeeApplicationJobTitle"
+                app:layout_constraintVertical_bias="1.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
