--- a/app/src/main/res/layout/recycler_view_application_employee_row.xml
+++ b/app/src/main/res/layout/recycler_view_application_employee_row.xml
@@ -24,13 +24,15 @@
                 android:layout_width="64dp"
                 android:layout_height="24dp"
                 android:layout_marginTop="28dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="12dp"
                 android:text="Status:"
                 android:textAlignment="textEnd"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/textEmployeeApplicationStatus"
-                app:layout_constraintTop_toBottomOf="@+id/textEmployeeApplicationCoverLetter" />
+                app:layout_constraintTop_toBottomOf="@+id/textEmployeeApplicationCoverLetter"
+                app:layout_constraintVertical_bias="0.009" />
 
             <TextView
                 android:id="@+id/textEmployeeApplicationJobTitle"
@@ -80,6 +82,7 @@
                 android:layout_marginTop="28dp"
                 android:text="Applic Status"
                 android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView624"
                 app:layout_constraintEnd_toEndOf="@+id/textEmployeeApplicationCoverLetter"
                 app:layout_constraintTop_toBottomOf="@+id/textEmployeeApplicationCoverLetter" />
 
@@ -101,7 +104,7 @@
                 android:layout_width="107dp"
                 android:layout_height="27dp"
                 android:layout_marginStart="4dp"
-                android:layout_marginTop="88dp"
+                android:layout_marginTop="72dp"
                 android:layout_marginEnd="284dp"
                 android:text="Cover Letter:"
                 android:textStyle="bold"
@@ -111,15 +114,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView62" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btnEmployeeApplicationViewJob"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
-                android:text="Button"
+                android:text="View Job"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/textEmployeeApplicationCoverLetter"
                 app:layout_constraintEnd_toEndOf="@+id/textApplicationID"
                 app:layout_constraintTop_toBottomOf="@+id/textEmployeeApplicationJobTitle"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="0.328" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
