--- a/app/src/main/res/layout/recycler_view_work_experience_row.xml
+++ b/app/src/main/res/layout/recycler_view_work_experience_row.xml
@@ -43,8 +43,8 @@
 
             <TextView
                 android:id="@+id/textWorkExperienceYears"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="97dp"
+                android:layout_height="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="28dp"
                 android:text="YearsAtWork"
